Fix : Spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -249,7 +249,7 @@ body {
 }
 
 .text-center.title4 {
-  padding-top: 12%;
+  padding-top: 7%;
   font-size: 45px;
   font-weight: 800;
 }
@@ -298,6 +298,7 @@ body {
   width: 100%;
   height: 100%;
   padding-top: 4%;
+  padding-bottom: 4%;
 }
 
 #section3-5-subheading {
